--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="index.css">
     <title>SNetwork</title>
 </head>
 <body>
-    <div id="root"></div>
+<div id="root"></div>
+<div class="body">
+        <video autoplay loop class="video-background">
+            <source src="./audio/backgroundvideo.mp4"></source>
+        </video>
+</div>
+<div class="footer">
+<div class="footer-context">
+<ul>
+    <li>Snetwork</li>
+    <li>While using SNetwork, you agree to have read and accepted our terms of use, cookie and privacy policy.</li>
+    <li>Copyright 2004-2024 by Refsnes Data.</li>
+    <li>All Rights Reserved. SNetwork is Powered by Phongyv</li>
+    <li>Contact:phongyv33333@gmail.com</li>
+</ul> 
+</div>
+<div class="footer-image">
+    <img class="footer-img" src="./logonofont.png" alt="">
+    <div class="footer-link">
+        <ul>
+            <li>https://snetwork-80dc1.web.app</li>
+            <li>https://snetwork-80dc1.firebaseapp.com</li>
+        </ul>
+    </div>
+</div>
+</div>
 </body>
 </html>
