--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
+    <meta name="google-adsense-account" content="ca-pub-3294032796053678">
     <title>SNetwork</title>
 </head>
 <body>
